--- a/src/content/partials/cloudflare-one/access/create-service-token.mdx
+++ b/src/content/partials/cloudflare-one/access/create-service-token.mdx
@@ -57,10 +57,10 @@ import { Tabs, TabItem } from '~/components';
 
 5. Read the Client ID and Client Secret:
 		```sh
-		terraform output example_service_token_client_id
+		terraform output -raw example_service_token_client_id
 		```
 		```sh
-		terraform output example_service_token_client_secret
+		terraform output -raw example_service_token_client_secret
 		```
 
 </TabItem> </Tabs>
